--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header class="blog-header py-3">
           <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-              <a class="text-muted" href="#">Wed Dec 2, 2020</a>
+              <a class="date-widget" href="#">Wed Dec 2, 2020</a>
             </div>
             <div class="col-4 text-center">
               <a class="blog-header-logo " href="#">Newsweek</a>
@@ -378,7 +378,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="vs mx-auto">
+                    <div class="vs mx-auto align-middle">
                         <p class="text-center">VS</p>
                     </div>
                 </div>
@@ -553,13 +553,201 @@
 
                 <!-- end of column 3 -->
             </div>
-
-
-
+            <!-- end of columns -->
           </div>
 
+          <!-- start of grid -->
+<div class="row">
+    <div class="mx-auto">
+        <header>
+            <h5>
+                IN THE MAGAZINE
+            </h5>
+        </header>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <img class="card-img-top" src="https://d.newsweek.com/en/full/1675581/cover-december-04-11-2020.webp?w=290&h=387&q=90&f=c7f495b3d564f2f12dfd40832c688b4e" alt="Newsweek magazine">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        <a href="#">
+                            See all Features
+                        </a>
+                        </h5>
+                    </div>
+                  </div>
+            </div>
+            <div class="col">
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="https://d.newsweek.com/en/full/1674257/cover-fe-vaccine-moderna.webp?w=466&h=311&l=49&t=48&q=90&f=b4199882348a460299d282c96d719a51" alt="doctor office">
+                        <div class="card-body">
+                            <span class="badge badge-danger">Cover</span>
+                            <span class="badge badge-light">Health</span>
+                          <h5 class="card-title">
+                                <a href="#">
+                                    Vaccines Won't Stop the Pandemic Until 50 Million US Skeptics Embrace Them 
+                                </a>
+                            </h5>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="https://d.newsweek.com/en/full/1675767/per-prisoners-history-01-450090369jpg.webp?w=466&h=311&l=48&t=64&q=90&f=c502a88a280f529b973548b54bda0f49" alt="National Monument">
+                        <div class="card-body">
+                            <span class="badge badge-danger">
+PERISCOPE
+                            </span>
+                            <span class="badge badge-light">
+US  
+                            </span>
+                          <h5 class="card-title">
+                                <a href="#">
+                                    Understanding the Iwo Jima Memorial's Power and Whether to Topple Monuments
+                                </a>
+                            </h5>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="https://d.newsweek.com/en/full/1675779/per-prisoners-history-04.webp?w=466&h=311&l=60&t=59&q=90&f=55acc462b556fd64fce7064636317f47" alt="Some dude face">
+                        <div class="card-body">
+                            <span class="badge badge-danger">
+PERISCOPE
+                            </span>
+                            <span class="badge badge-light">
+US
+                            </span>
+                          <h5 class="card-title">
+                                <a href="#">
+                                    'Some Monuments Really Should Be Torn Down,' Says WWII Historian Keith Lowe
+                                </a>
+                            </h5>
+                        </div>
+                      </div>
+                </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="https://d.newsweek.com/en/full/1674794/cul-map-holiday-food-tang-yuan.webp?w=466&h=311&l=62&t=38&q=90&f=258feff5c6f4dc315f1d67e58f8c5ba3" alt="Potatoes">
+                        <div class="card-body">
+                            <span class="badge badge-danger">
+DONWTIME
+                            </span>
+                            <span class="badge badge-light">
+CULTURE
+                            </span>
+                          <h5 class="card-title">
+                                <a href="#">
+                                    Unique Holiday Foods From Around the World
+                                </a>
+                            </h5>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="https://d.newsweek.com/en/full/1676922/christian-serratos-feels-pressure-portraying-selena.webp?w=466&h=311&q=90&f=4d0453f2b4fc906121673befc3e7b6b5" alt="Selena">
+                        <div class="card-body">
+                            <span class="badge badge-danger">
+DOWNTIME
+                            </span>
+                            <span class="badge badge-light">
+CULTURE
+                            </span>
+                          <h5 class="card-title">
+                                <a href="#">
+                                    Christian Serratos Feels the 'Pressure' of Portraying Selena 
+                                </a>
+                            </h5>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="https://d.newsweek.com/en/full/1680836/monolith.webp?w=397&h=265&f=f9b3e02e71f4492564d0fd67f185a61b" alt="Monolith">
+                        <div class="card-body">
+                            <span class="badge badge-danger">
+IN FOCUS
+                            </span>
+                          <h5 class="card-title">
+                                <a href="#">
+                                    Lineup
+                                </a>
+                            </h5>
+                        </div>
+                      </div>
+                </div>
+            </div>
+          </div>
+
+    </div>
+<!-- end of grid -->
+</div>
+<!-- start of footer -->
+<footer>
+    <div class="row">
+        <div class=" colflex-start">
+        <a class="brand" href="#" title="Newsweek Homepage">
+            Newsweek
+        </a>
+        </div>  
+        <div class="col>">
+        <p class="copyright">© 2020 NEWSWEEK DIGITAL LLC</p>
+        </div>
+   
+    <div class=" col flex-end">
+        <nav class="nav d-flex justify-content-end">
+            <a class="p-2 text-muted" href="#">FB</a>
+            <a class="p-2 text-muted" href="#">TW</a>
+            <a class="p-2 text-muted" href="#">IG</a>
+            <a class="p-2 text-muted" href="#">TM</a>
+            <a class="p-2 text-muted" href="#">LN</a>
+          </nav>
+</div>
+</div>
+<nav class="nav d-flex justify-content-start">
+    <a class="p-2"> Editions:</a>
+    <a class="p-2 text-muted" href="#">U.S.</a>
+    <a class="p-2 text-muted" href="#">Pakistan</a>
+    <a class="p-2 text-muted" href="#">Polska</a>
+    <a class="p-2 text-muted" href="#">Romania</a>
+  </nav>
+  <nav class="nav d-flex justify-content-start">
+    <a class="p-2 text-muted" href="#">About Us</a>
+    <a class="p-2 text-muted" href="#">Corrections</a>
+    <a class="p-2 text-muted" href="#">Contact Us</a>
+    <a class="p-2 text-muted" href="#">Editorial Guidelines</a>
+    <a class="p-2 text-muted" href="#">Advertise</a>
+    <a class="p-2 text-muted" href="#">Copyright</a>
+    <a class="p-2 text-muted" href="#">Terms & Conditions</a>
+    <a class="p-2 text-muted" href="#">Privacy Policy</a>
+    <a class="p-2 text-muted" href="#">Cookie Policy</a>
+    <a class="p-2 text-muted" href="#">Terms of Sale</a>
+    <a class="p-2 text-muted" href="#">Archive</a>
+    <a class="p-2 text-muted" href="#">Announcements</a>
+  </nav>
 
 
+</footer>
+
+
+<!-- end of footer -->
+
+<!-- end of body -->
  </div>
 
 
